--- a/htaContent.html
+++ b/htaContent.html
@@ -6,8 +6,8 @@
 	<!--Set compatibility to newer IE version-->	
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
 	<!--styles.css stores button information-->	
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="options.css">
+	<link rel="stylesheet" href="Styles/styles.css">
+	<link rel="stylesheet" href="Styles/options.css">
     <title>Love Bao Stickers</title>
 
 </head>
