More Rearranging Structure

--- a/htaContent.html
+++ b/htaContent.html
@@ -6,8 +6,8 @@
 	<!--Set compatibility to newer IE version-->	
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
 	<!--styles.css stores button information-->	
-	<link rel="stylesheet" href="Styles/styles.css">
-	<link rel="stylesheet" href="Styles/options.css">
+	<link rel="stylesheet" href="CSS Styles/styles.css">
+	<link rel="stylesheet" href="CSS Styles/options.css">
     <title>Love Bao Stickers</title>
 
 </head>
@@ -269,7 +269,7 @@
 		// Add the logo image
 		var iconImage = document.createElement('img');
 		iconImage.id = 'iconImage';
-		iconImage.src = 'pig.png';
+		iconImage.src = 'Images/pig.png';
 		iconImage.alt = 'Logo';
 		iconContainer.appendChild(iconImage);
 		
@@ -647,7 +647,7 @@
 
 <!-- Logo images wrapped in containers -->
 <div id="logoContainer" class="logo-container">
-    <img class="padded" src="logo.jpg" alt="Love Bao Logo">
+    <img class="padded" src="Images/logo.jpg" alt="Love Bao Logo">
 </div>
 
 <div id="headingContainer"></div>
