--- a/htaContent.html
+++ b/htaContent.html
@@ -418,7 +418,8 @@
 						{terms: ["Crab", "Eel", "Fish", "Octopus"], color: "#34568B"},						
 						{terms: ["Vegetarian", "Cucumber", "Tofu", "Fries", "King"], color: "#88B04B"},
 						{terms: ["Mala"], color: "#ea002a"},
-						{terms: ["Crispy"], color: "#955251"}
+						{terms: ["Crispy"], color: "#955251"},
+						{terms: ["Sweet", "Tea", "Slush"], color: "Pink"}
 						]
 		for (var i = 0; i < searchTerms.length; i++){
 			for (var j=0; j < searchTerms[i].terms.length; j++){
